--- a/bcm2835/CMakeLists.txt
+++ b/bcm2835/CMakeLists.txt
@@ -1,15 +1,12 @@
-ExternalProject_Add(bcm2835_project
-  URL http://www.airspayce.com/mikem/bcm2835/bcm2835-1.57.tar.gz
-  CONFIGURE_COMMAND CC=${CMAKE_C_COMPILER} ./configure --host=armv6-logicals-linux-gnueabihf --prefix=<INSTALL_DIR>
-  BUILD_IN_SOURCE TRUE
+set(BCM2835_ARCHIVE ${CMAKE_BINARY_DIR}/bcm2835-1.57.tar.gz)
+set(BCM2835_DIR ${CMAKE_BINARY_DIR}/bcm2835-1.57)
+if (NOT EXISTS ${BCM2835_ARCHIVE})
+  file(DOWNLOAD http://www.airspayce.com/mikem/bcm2835/bcm2835-1.57.tar.gz ${BCM2835_ARCHIVE} SHOW_PROGRESS)
+endif ()
+execute_process(COMMAND cmake -E tar xf ${BCM2835_ARCHIVE} WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+add_library(bcm2835 STATIC
+  ${BCM2835_DIR}/src/bcm2835.c
 )
-
-ExternalProject_Get_property(bcm2835_project INSTALL_DIR)
-
-add_library(bcm2835 INTERFACE)
-
-target_link_libraries(bcm2835 INTERFACE ${INSTALL_DIR}/lib/libbcm2835.a)
-
-target_include_directories(bcm2835 INTERFACE ${INSTALL_DIR}/include)
-
-add_dependencies(bcm2835 bcm2835_project)
+target_include_directories(bcm2835 PUBLIC
+  ${BCM2835_DIR}/src
+)
